# react-native-fs-turbo

./: .eslintrc.js  .gitignore  .prettierrc.json  LICENSE  README.md  RNFSTurbo.podspec  package.json  react-native.config.js  tsconfig.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/codegen/: RNFSTurboSpec.java
android/src/main/cpp/: JNIOnLoad.cpp  RNFSTurboLogger.cpp  RNFSTurboModule.cpp  RNFSTurboModule.h  RNFSTurboPlatformHelper.cpp
android/src/main/java/com/cmpayc/rnfsturbo/: JNIOnLoad.java  RNFSTurboDownloadParams.java  RNFSTurboDownloadResult.java  RNFSTurboDownloader.java  RNFSTurboIORejectionException.java  RNFSTurboModule.java  RNFSTurboPackage.java  RNFSTurboPlatformContextModule.java  RNFSTurboPlatformHelper.java  RNFSTurboUploadParams.java  RNFSTurboUploadResult.java  RNFSTurboUploader.java
cpp/: NativeRNFSTurboModule.cpp  NativeRNFSTurboModule.h  RNFSTurboHostObject.cpp  RNFSTurboHostObject.h  RNFSTurboInstall.cpp  RNFSTurboInstall.h  RNFSTurboLogger.h  RNFSTurboPlatformHelper.h
cpp/algorithms/: base64.cpp  base64.h  sha224.cpp  sha224.h  sha384.cpp  sha384.h  sha512.cpp  sha512.h
cpp/algorithms/Krypt/: AES.cpp  AES.hpp  aes-config.hpp  blockcipher.hpp  bytearray.cpp  bytearray.hpp  functions.cpp  functions.hpp  mode.cpp  mode.hpp  padding.cpp  padding.hpp  types.hpp
cpp/encryption/: encryption-utils.cpp  encryption-utils.h
cpp/filesystem/: filesystem-utils.cpp  filesystem-utils.h  helpers.cpp  helpers.h
ios/: PrivacyInfo.xcprivacy  RNFSTurboDownloader.h  RNFSTurboDownloader.mm  RNFSTurboLogger.mm  RNFSTurboModule.h  RNFSTurboModule.mm  RNFSTurboOnLoad.mm  RNFSTurboPlatformContextModule.h  RNFSTurboPlatformContextModule.mm  RNFSTurboPlatformHelper.mm  RNFSTurboUploader.h  RNFSTurboUploader.mm
src/: ModuleNotFoundError.ts  NativeRNFSTurboModule.ts  NativeRNFSTurboPlatformContextModule.ts  RNFSTurbo.ts  Types.ts  createRNFSTurbo.ts  globals.d.ts  index.ts
